# PAMSI_projekt

./: CMakeLists.txt  ControlObject.cpp  ControlObject.h  Object.cpp  Object.h  Rope.cpp  Window.cpp  Window.h  funkcje.h  main.cpp  program.cpp  program2.cpp
